--- a/OtoshimonoSystem/Base.lproj/Main.storyboard
+++ b/OtoshimonoSystem/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First View Controller-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="FirstViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="OtoshimonoSystem" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,11 +26,11 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="20" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-oD-gYe">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" estimatedRowHeight="-1" sectionHeaderHeight="20" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ydd-oD-gYe">
                                 <rect key="frame" x="0.0" y="95" width="1024" height="673"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="qOR-1g-Jzy">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="80" id="qOR-1g-Jzy" customClass="TableViewCell" customModule="OtoshimonoSystem" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="20" width="1024" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qOR-1g-Jzy" id="pJl-9r-WOW">
@@ -98,22 +98,39 @@
                                                 <constraint firstItem="oC0-jQ-YIC" firstAttribute="leading" secondItem="hF1-2g-IoW" secondAttribute="trailing" constant="8" id="zXl-As-sia"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="pickDate" destination="oC0-jQ-YIC" id="FO3-kT-ioa"/>
+                                            <outlet property="pickDetail" destination="YOl-gJ-08S" id="cRc-xO-k5s"/>
+                                            <outlet property="pickImage" destination="hF1-2g-IoW" id="a7W-vS-Vk6"/>
+                                            <outlet property="pickName" destination="vPU-ij-fAM" id="zgv-su-zbZ"/>
+                                            <outlet property="pickPlace" destination="cJy-cE-xqb" id="IjK-bI-rOV"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="8Bg-0E-oNd"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="xZz-pa-nsI"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nM0-u6-Dxo">
                                 <rect key="frame" x="0.0" y="45" width="100" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="AOQ-z0-ynW"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="更新"/>
+                                <connections>
+                                    <action selector="renewal:" destination="BYZ-38-t0r" eventType="touchUpInside" id="I2O-Nz-3z7"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a4b-62-nXc">
                                 <rect key="frame" x="924" y="45" width="100" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="PuO-Nk-URX"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="検索"/>
+                                <connections>
+                                    <action selector="search:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ynN-a5-9IH"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -134,15 +151,18 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="ydd-oD-gYe" id="cFd-gS-pBh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.18140929535232" y="133.59999999999999"/>
         </scene>
-        <!--View Controller-->
+        <!--Search View Controller-->
         <scene sceneID="HcY-5W-5Gr">
             <objects>
-                <viewController id="S83-sb-GLA" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="searchView" id="S83-sb-GLA" customClass="SearchViewController" customModule="OtoshimonoSystem" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="IDt-SL-fJT">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -162,10 +182,17 @@
                                     <constraint firstAttribute="width" constant="100" id="beb-8x-arC"/>
                                 </constraints>
                                 <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <action selector="close:" destination="S83-sb-GLA" eventType="touchUpInside" id="u43-9s-3c3"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jNE-M0-nHQ">
                                 <rect key="frame" x="0.0" y="95" width="1024" height="673"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="S83-sb-GLA" id="ckq-hD-GKo"/>
+                                    <outlet property="delegate" destination="S83-sb-GLA" id="isv-KF-t86"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -183,15 +210,18 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bjW-HA-Zaj"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="jNE-M0-nHQ" id="3go-cD-dXb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mpq-vY-oIO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.18140929535232" y="1032.8"/>
+            <point key="canvasLocation" x="137.109375" y="1032.03125"/>
         </scene>
-        <!--View Controller-->
+        <!--Second View Controller-->
         <scene sceneID="OlG-sl-S64">
             <objects>
-                <viewController id="GOW-vW-e5U" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="secondView" id="GOW-vW-e5U" customClass="SecondViewController" customModule="OtoshimonoSystem" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="t9v-6M-xH6">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -211,6 +241,9 @@
                                     <constraint firstAttribute="width" constant="100" id="Vma-gy-k41"/>
                                 </constraints>
                                 <state key="normal" title="&lt;"/>
+                                <connections>
+                                    <action selector="close:" destination="GOW-vW-e5U" eventType="touchUpInside" id="gdO-m4-8aU"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PBd-1M-lv9">
                                 <rect key="frame" x="0.0" y="95" width="500" height="50"/>
@@ -289,6 +322,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uTg-P8-OOH"/>
                     </view>
+                    <connections>
+                        <outlet property="date" destination="dog-Zg-UG5" id="VDf-Nn-WgI"/>
+                        <outlet property="detail" destination="6FV-qL-JOe" id="7li-hU-9TU"/>
+                        <outlet property="id" destination="Y2h-Ft-KsX" id="25U-ae-FZq"/>
+                        <outlet property="name" destination="PBd-1M-lv9" id="MPt-47-48D"/>
+                        <outlet property="place" destination="lQB-cK-xcC" id="2LW-Dt-eW4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0ux-yn-vMZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
